--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,17 @@ body {
     background-color:rgb(151, 96, 158);
 }
 
-h1 {
+
+#root {
+
     text-align: center; 
+}
+h1 {
     color: white;
     font-family: 'Dancing Script', cursive;
     font-size: 55px;
+}
+
+img {
+    width: 400px;
 }
